# portfolio-balancer-ai-slop

./: Cargo.toml  LICENSE
examples/: policies.json  positions-lots.json  positions.json  prices.json  targets.json
src/: allocate.rs  core.rs  engine.rs  errors.rs  id.rs  io_json.rs  lib.rs  lot.rs  main.rs  model.rs  policy.rs  rebalance.rs  registry.rs  sink.rs  source.rs  validate.rs
src/store/: json.rs  mod.rs
src/store/sqlite/: mod.rs  schema.sql  sink.rs  source.rs
tests/: integration.rs
