[package]
name = "portfolio-rebalancer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Multi-account stock portfolio rebalancer with sleeve-to-account preferences."
repository = "https://github.com/jwtrtrent/portfolio-balancer-ai-slop"
readme = "README.md"

[[bin]]
name = "portfolio-rebalancer"
path = "src/main.rs"

[lib]
name = "portfolio_rebalancer"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
time = { version = "0.3", features = ["serde", "parsing", "formatting", "macros"] }
cel-interpreter = { version = "0.10", default-features = false, features = ["regex"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
assert_cmd = "2"
